--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -1,25 +1,6 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Twitter</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-	</head>
-	<body class="loggedin">
-		<nav class="navtop">
-			<div>
-				<h1>Twitter</h1>
-                <a href="{{ url_for('home') }}"><i class="fas fa-home"></i>Home</a>
-				<a href="{{ url_for('profile') }}"><i class="fas fa-user-circle"></i>Profile</a>
-				<a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i>Logout</a>
-			</div>
-		</nav>
-		<div class="content">
-		</div>
-	</body>
-</html>
+{% extends 'header.html' %}
 
+{% block content %}
 <h2>Profile Page here lewu</h2>
 <div>
     <p>Your account details are below:</p>
@@ -38,3 +19,4 @@
         </tr>
     </table>
 </div>
+{% endblock %}
