Dodano zmianę hasła z potwierdzeniem

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -23,6 +23,7 @@
 				</label>
 				<input type="password" name="password" placeholder="Password" id="password" required>
 				<div class="msg">{{ msg }}</div>
+				<a href="">Reset Password</a>
 				<input type="submit" value="Login">
 			</form>
 		</div>
