Prototyp like'ów oraz wyszukiwarka

--- a/backend/templates/_post.html
+++ b/backend/templates/_post.html
@@ -1,5 +1,7 @@
 <tr>
     <td>Created by: {{ _post[0] }} </td>
     <td> {{ _post[1] }} </td>
+    <td>Likes: {{ _post[3] }} </td>
+    <a href="{{ url_for('likeadd') }}">Like it</a>
 </tr>
 
