Dodanie followers/following listy i naprawa bugow wyszukiwarki

--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -18,5 +18,7 @@
             <td>{{ email }}</td>
         </tr>
     </table>
+    <a href="{{ url_for('following') }}">Following</a>
+    <a href="{{ url_for('followers') }}">Followers</a>
 </div>
 {% endblock %}
