--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -17,6 +17,14 @@
             <td>Email:</td>
             <td>{{ email }}</td>
         </tr>
+        <tr>
+            <td>Following:</td>
+            <td>{{ following }}</td>
+        </tr>
+        <tr>
+            <td>followers:</td>
+            <td>{{ followers }}</td>
+        </tr>
     </table>
     <a href="{{ url_for('following') }}">Following</a>
     <a href="{{ url_for('followers') }}">Followers</a>
