poprawki i prototyp wyszukiwania hashtagów

--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -149,3 +149,46 @@ body.loggedin {
  border-collapse: separate;
  border-spacing: 15px;   
 }
+
+ul {
+    display: inline-block;
+    text-align: left;
+}
+
+.ok {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+
+li {
+ display: block;
+ transition-duration: 0.5s;
+ margin-top: -2%;
+}
+
+li:hover {
+  cursor: pointer;
+}
+
+ul li ul {
+  visibility: hidden;
+  /* opacity: 0; */
+  position: absolute;
+  transition: all 0.5s ease;
+  /* margin-top: 1rem; */
+  left: 48%;
+  display: none;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+  visibility: visible;
+  /* opacity: 1; */
+  display: block;
+}
+
+ul li ul li {
+  clear: both;
+  width: 100%;
+}
