Poprawki w funkcji dodawaniu likeów

--- a/backend/templates/_post.html
+++ b/backend/templates/_post.html
@@ -2,6 +2,6 @@
     <td>Created by: {{ _post[0] }} </td>
     <td> {{ _post[1] }} </td>
     <td>Likes: {{ _post[3] }} </td>
-    <a href="{{ url_for('likeadd') }}">Like it</a>
+    <td><a href="{{ url_for('likeadd', body=_post[1]) }}">Like it</a></td>
 </tr>
 
