--- a/backend/templates/header3.html
+++ b/backend/templates/header3.html
@@ -10,7 +10,7 @@
 	<body class="loggedin">
 		<nav class="navtop">
 			<div>
-				<h1>Twittertest</h1>
+				<h1>Twitter</h1>
 				<form method="post">
 					<input type="text" name="search2" required>
 					<input type="submit" value="Search">
