Add dislikes function

--- a/backend/templates/_post.html
+++ b/backend/templates/_post.html
@@ -3,5 +3,6 @@
     <td> {{ _post[1] }} </td>
     <td>Likes: {{ _post[3] }} </td>
     <td><a href="{{ url_for('likeadd', body=_post[1]) }}">Like it</a></td>
+    <td><a href="{{ url_for('dislike', body=_post[1]) }}">Dislike it</a></td>
 </tr>
 
