Podgląd na swoje posty oraz funkcja usuwania ich

--- a/backend/templates/profile.html
+++ b/backend/templates/profile.html
@@ -28,5 +28,6 @@
     </table>
     <a href="{{ url_for('following') }}">Following</a>
     <a href="{{ url_for('followers') }}">Followers</a>
+    <a href="{{ url_for('myposts') }}">My posts</a>
 </div>
 {% endblock %}
