Dodano alerty przy like/dislike

--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -3,8 +3,6 @@
 {% block content %}
 <p>Welcome back, {{ username }}!</p>
 <h1>Posts:</h1>
-<h2>Author: {{ usernamepost }}</h2>
-
 
 <p>{{ body }}</p>
 
@@ -15,3 +13,5 @@
 
 </table>
 {% endblock %}
+
+{% block body %}{% endblock %}
