--- a/backend/templates/header2.html
+++ b/backend/templates/header2.html
@@ -43,3 +43,14 @@
 	</body>
 </html>
 {% block content %} {% endblock %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+{% block body %}{% endblock %}
